--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -21,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.1.0",
     "style-loader": "^0.20.3",
     "webpack": "3",
