Cleanup SVG and styling

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "extends": "airbnb",
   "rules": {
     "semi": ["error", "never"],
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
+    "react/no-array-index-key": "off"
   }
 }
